--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="nextButton">Next</string>
-    <string name="bottom_navigation_home">home</string>
+    <string name="bottom_navigation_home">Home</string>
     <string name="bottom_navigation_new_post">New Post</string>
     <string name="bottom_navigation_my_jobs">My Jobs</string>
     <string name="bottom_navigation_my_profile">My Profile</string>
@@ -29,5 +17,81 @@
     <string name="permission_denied_dialog_message_location">enable location from settings</string>
 
     <string name="loading_data">loading...</string>
+
+    <!--Top Action Bar Start-->
+    <string name="profile_action_bar_settings_cog">Settings</string>
+    <string name="home_action_bar_filter_jobs">Filter Jobs</string>
+    <!--Top Action Bar End-->
+
+    <!--Account Settings Start-->
+    <string name="account_settings_is_user_anonymous_key">is_user_anonymous</string>
+    <string name="account_settings_title">Account Preferences</string>
+    <string name="low">Low</string>
+    <string name="normal">Normal</string>
+    <string name="on">On</string>
+    <string name="off">Off</string>
+
+    <string name="account_settings_create_account_key">create_account</string>
+    <string name="account_settings_reset_email_key">reset_email</string>
+    <string name="account_settings_reset_password_key">reset_password</string>
+    <string name="account_settings_dark_mode_key">dark_mode</string>
+    <string name="account_settings_subscription_type_display_key">subscription_type_display</string>
+    <string name="account_settings__upgrade_subscription_type_display_key">upgrade_subscription_type_display</string>
+    <string name="account_settings_sign_out_key">sign_out</string>
+    <string name="about_us_private_policy_key">private_policy</string>
+    <string name="about_us_terms_of_service_key">terms_of_service</string>
+    <string name="about_us_feed_back_key">feed_back</string>
+    <string name="about_us_help_center_key">help_center</string>
+    <string name="about_us_follow_us_on_twitter_key">follow_us_on_twitter</string>
+    <string name="account_settings_delete_account_key">delete_account</string>
+
+    <string name="account_settings_account_settings_title">Account Settings</string>
+    <string name="account_settings_create_account">Create Account</string>
+    <string name="account_settings_update_email">Reset Email</string>
+    <string name="account_settings_update_password">Reset Password</string>
+
+    <string name="account_settings_general_title">General</string>
+    <string name="account_settings_dark_mode">Dark Mode</string>
+
+    <string name="account_settings_manage_subscription_title">Manage Subscription</string>
+    <string name="account_settings_membership_type">Membership</string>
+    <string name="account_settings_membership_basic">Basic</string>
+    <string name="account_settings_membership_premium">Premium</string>
+    <string name="account_settings_membership_upgrade">Upgrade now</string>
+
+    <string name="account_settings_language_title">Language</string>
+    <string name="account_settings_language">Language</string>
+    <string name="account_settings_language_default_value">English</string>
+
+    <string name="account_settings_notification_title">Notifications</string>
+    <string name="account_settings_push_notifications">Push Notifications</string>
+
+
+    <string name="account_settings_data_usage_title">Data Usage</string>
+    <string name="account_settings_location_updates">Location Updates</string>
+    <string name="account_settings_location_updates_summary_off">Infrequent Location Updates</string>
+    <string name="account_settings_location_updates_summary_on">Normal Location Updates</string>
+    <string name="account_settings_picture_quality">Picture Quality</string>
+    <string name="account_settings_picture_quality_summary_off">Low Resolution Enabled</string>
+    <string name="account_settings_picture_quality_summary_on">High Resolution Enable</string>
+
+    <string name="account_settings_about_us_title">About Us</string>
+
+    <string name="account_settings_private_policy">Private Policy</string>
+    <string name="account_settings_terms_of_service">Terms of Service</string>
+    <string name="account_settings_feed_back">FeedBack</string>
+    <string name="account_settings_help_center">Help Center</string>
+    <string name="account_settings_follow_us_on_twitter">Follow us on Twitter</string>
+
+    <string name="account_settings_sign_out">Log Out</string>
+
+
+    <string name="account_settings_delete_account">Delete Account</string>
+    <string name="delete_account_confirm_password_key">confirm_password</string>
+    <string name="delete_account_confirm_delete_account_key">delete_account</string>
+    <string name="delete_account_confirm_password">Confirm Password</string>
+    <string name="delete_account_confirm_delete_account">Delete</string>
+
+    <!--Account Settings End-->
 
 </resources>
